@@ -1,5 +1,5 @@
 name="lacaml"
-version="3.0.19"
+version="3.0.21"
 description="LACAML - BLAS/LAPACK-interface for OCaml"
 
 requires="lacaml.core"
